third_party/blink/web_tests/platform/generic/http/tests/security/postMessage/invalid-origin-throws-exception-expected.txt
window.location.href = http://127.0.0.1:8000/security/postMessage/invalid-origin-throws-exception.html
waiting...
Encountered exception "SyntaxError: Failed to execute 'postMessage' on 'Window': Invalid target origin '' in a call to 'postMessage'." while posting message to ''.
Encountered exception "SyntaxError: Failed to execute 'postMessage' on 'Window': Invalid target origin 'asdf' in a call to 'postMessage'." while posting message to 'asdf'.
Encountered exception "SyntaxError: Failed to execute 'postMessage' on 'Window': Invalid target origin '/tmp/foo' in a call to 'postMessage'." while posting message to '/tmp/foo'.
Encountered exception "SyntaxError: Failed to execute 'postMessage' on 'Window': Invalid target origin '//localhost' in a call to 'postMessage'." while posting message to '//localhost'.
Encountered exception "SyntaxError: Failed to execute 'postMessage' on 'Window': Invalid target origin 'asdf:' in a call to 'postMessage'." while posting message to 'asdf:'.
Encountered exception "SyntaxError: Failed to execute 'postMessage' on 'Window': Invalid target origin 'http:' in a call to 'postMessage'." while posting message to 'http:'.
Received message: data="Received message: data="done" origin="http://127.0.0.1:8000"" origin="http://localhost:8000"
